# Orpy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
source/: CMakeLists.txt  Orpy.cpp
source/Common/: Common.hpp  HTTPProtocol.hpp  IConf.hpp  IConfs.hpp  ICore.hpp  ICreator.hpp  IHttp.hpp  ISockets.hpp  Request.hpp  Response.hpp  Tools.hpp  data.hpp  fileGuard.hpp  http.hpp  libHelper.hpp
source/Conf/: conf.cpp  conf.hpp
source/ConfsManager/: CMakeLists.txt  ConfsManager.cpp  ConfsManager.hpp
source/Core/: CMakeLists.txt  Http.cpp  Http.def  Http.hpp  Http.map  core.cpp  core.hpp
source/Creator/: CMakeLists.txt  Creator.cpp  Creator.def  Creator.hpp  Creator.map
source/Json/: CMakeLists.txt  Json.cpp  Json.hpp
source/Orpy/: Orpy.cpp
source/Parser/: CMakeLists.txt  Parser.cpp  Parser.hpp
source/Pool/: Pool.hpp  Synchronization.hpp
source/Router/: CMakeLists.txt  Router.cpp  Router.hpp
source/Sockets/: CMakeLists.txt  Sockets.cpp  Sockets.def  Sockets.hpp  Sockets.map
source/Template/: CMakeLists.txt  Template.cpp  Template.hpp
source/Tools/: tools.cpp  tools.hpp
source/fileGuard/: CMakeLists.txt  fileGuard.cpp  fileGuard.hpp
